# transformers

./: Dockerfile  GitVersion.yml  README.md  docker-compose.yml  installation.md  pyproject.toml
.github/: ci.yml
.github/workflows/: ci.yml
course/10_metrics_for_language/: 03_exact_match.ipynb  04_rouge.ipynb  05_model_metrics.ipynb
course/11_reader_retriever_qa_haystack/: 06_haystack.ipynb  07_what_is_elastic.ipynb  08_elasticsearch_setup.ipynb
course/13_similarity/: 00_intro.ipynb  01_transformer_dense_vectors.ipynb  02_similarity_metrics.ipynb  03_calculating_similarity.ipynb  04_sentence_transformers.ipynb
course/3_preprocessing/: 01_tokens.ipynb  02_stemming.ipynb  03_lemmatization.ipynb  04_normalization.ipynb  lemmatisation_mine.ipynb
course/4_attention/: 00_summary.ipynb  01_dot_product_attention.ipynb  02_self_attention.ipynb  03_bidirectional_attention.ipynb  04_multihead_attention.ipynb
course/5_language_classification/: 00_intro_sentiment_analysis.ipynb  01_sentiment_with_flair.ipynb  02_sentiment_with_transformers.ipynb
course/6_project_build_tf_sentiment_model/: 00_preprocessing.ipynb  01_input_pipeline.ipynb  02_build_and_train.ipynb  02_build_and_train_lstm_example.ipynb  sentiment.ipynb
course/7_long_text_clf_bert/: 03_long_text_sentiment.ipynb  04_window_method_in_pytorch.ipynb
course/8_named_entity_recognition/: 00_ner_with_spacy.ipynb  01_getting_reddit_data.ipynb  02_using_ner_to_tag_data.ipynb  03_ner_and_sentiment.ipynb  04_spacy_and_transformers-Copy1.ipynb  04_spacy_and_transformers.ipynb  ner_transformer.ipynb
course/8_named_entity_recognition/data/: reddit_investing.csv
course/8_named_entity_recognition/data/processed/: reddit_investing_ner.csv
course/9_question_answering/: 00_intro_to_qa.ipynb  01.1_squad_dataset_validation.ipynb  01.2_match_case_py310.ipynb  01_squad_dataset.ipynb  02_first_qa_model.ipynb  resources.ipynb
