[tool.poetry]
name = "dev"
version = "0.1.0"
description = ""
authors = ["liam.moore <liam.r.moore@protonmail.ch>"]

[tool.poetry.dependencies]
python = "3.7.9"
boto3 = "^1.21.15"
python-dotenv = "^0.18.0"
pydantic = "*"
xarray = "*"
dask = "*"
distributed = "*"
transformers = "^4.1.1"
tensorflow-gpu = "2.7.1"
pandas = "^1.1.5"
nltk = "^3.5"
kaggle = "^1.5.12"
elasticsearch = "^7.10.0"
farm-haystack = "^0.7.0"
rouge = "^1.0.0"
flair = "^0.8"
spacy = "^3.*"
spacy-transformers = "^1.0.2"
fastapi = "*"
uvicorn = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^22.1.0"
pylint = "^2.12.2"
pytest-cov = "^3.0.0"
jupyter = "*"
jupyter_contrib_nbextensions = "*"
jupyterthemes = "*"
plotly = "*"
seaborn = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 88
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[tool.coverage.paths]
source = ["src/", "*/site-packages/"]

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 10
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    'if __name__ == "__main__":']
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[tool.pylint.format]
max-line-length = 88
[tool.pylint.basic]
variable-rgx = "[a-z_][a-z0-9_]{0,40}$"
[tool.pylint.global]
# ignoring missing module and missing class docstring errors
disable = ["C0114", "C0115", "W0621", "R0903", "R0913", "R0801", "W0212", "W1508", "W1203"]
output-format = "colorized"
fail-under = 8
extension-pkg-whitelist="pydantic"